@@ -228,6 +228,8 @@ fully support the editing toolbar, but was found to be too confusing.
   a warning in prefs and use default sig if not balanced)
 * (bug 2740) Accept image deletions on 'enter' submit from MSIE
 * (bug 3939) Don't try to load text for interwiki redirect target
+* Respect <noinclude> and <includeonly> during {{subst:}} expansion as well as
+  ordinary templates.
 
 
 === Caveats ===
